# MyLearningNotebook

./: .gitignore  Git和Windows和c++Not Book.docx  README.md  README.rd
0_MyFunctions/: Tools.lib  main.cpp
3_DrawSphere/: CMakeLists.txt
4_Diffuse/: ColorImageAntialiasing.ppm  ColorImageAntialiasing2.ppm  main.cpp  main.i
5_Matal/: _10_5Metal_Fuzz.ppm  main.cpp
6_Dielectics/: main.cpp
7_PositionableCamera/: _12_2PositioningAndOrientingTheCamera.ppm
Backup/: .gitignore  Cpp_Errors.rd
Backup/A_RayTracing/0.FirstProject/: CMakeLists.txt
Backup/A_RayTracing/1.GradualBackground/: CMakeLists.txt
Backup/A_RayTracing/1.GradualBackground/Main/: main.cpp
ColorImage/: CMakeLists.txt
ColorImage/main/: ColorImage.ppm  main.cpp
D_OpenGL/: DefineFile.hpp
FirstProject/: .gitignore
Includer/: Camera.cpp  Camera.hpp  Constants.hpp  FileStream.cpp  FileStream.hpp  Loger.hpp  Material.cpp  Material.hpp  Ray.hpp  Tools.cpp  Tools.hpp  Variables.cpp  Variables.hpp
MathLib/: xyl_math.hpp  xyl_objects.hpp  xyl_return_def_type.hpp  xyl_vector.cpp  xyl_vector.hpp
Note Book/: CPP_To_OpenCL.rd  CPP_WrongRecording.rd  Git和Windows和c++Not Book.docx  NoteBook.rd
Test/: test.cpp  test.ppm  test_tools.cpp
W_LeetCode/: bash.sh
Z_GeoGebra/: 3DTransform().ggb  3DTransform(閫忚鍙樻崲).ggb  3DTransform.ggb  3DTransform_BackUp.ggb  3D旋转矩阵.ggb  Camera(Included view transform).ggb  Camera.ggb  MatrixMultiple.ggb  Matrix_Transform(model to world).ggb  ModelToWorld.ggb  Object_Cube.ggb  OrthographicProjection(No camera).ggb  OrthographicProjection(With camera).ggb  OrthographyCamera.ggb  OrthographyTransform.ggb  PerspectiveCamera.ggb  PerspectiveTransform.ggb  Transform(Model To World To View).ggb  Transform.ggb  Transformation_3.ggb  VertexNormal.ggb  一条射线.ggb  三角函数可视化.ggb  娴滃本顐奸弴鏌ユ桨.ggb  旋转矩阵(旋转2D矩形).ggb  涓€涓偣鍜屼竴涓硶鍚戦噺缁勬垚骞抽潰.ggb  涓ゅ钩闈㈢浉浜ょ嚎.ggb  涔犻2.2.ggb  涔犻2.3.ggb  骞抽潰鍙傛暟鏂圭▼璇佹槑.ggb
Z_Notebooks/: Backup.txt  CppWrongRecording.rd  GraphicLearning.rd  Graphics_Addition.txt  LearningCmake.rd  LearningCpp.rd  LearningCppAndOpenCL.rd  LearningEnglish.rd  LearningGit.rd  LearningGitAndCmake.rd  LearningGraphics.rd  LearningGraphics_Addition.txt  LearningOpenGL.rd  LearningShell.rd  LearningVulkan.rd  (+5 more)
(+327 files in other folders)
